--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
-body{
+body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
 }
 
-.container{
+.container {
+    background-color: aquamarine;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    height: 600px;
-    width: 600px;
-    border-style: solid;
-    border-color: black;
-    box-shadow: 5px 5px 15px rgb(157, 157, 157);
+    height: 960px;
+    width: 960px;
 }
+
+.flex-item {
+    background-color: rgb(214, 2, 2);
+    border: 1px solid #000000;
+  }
