--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body {
     margin: 0;
     box-sizing: border-box;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -15,6 +16,32 @@ body {
     flex-wrap: wrap;
     height: 960px;
     width: 960px;
+}
+
+.config-container{
+    background-color: rgb(141, 255, 96);
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 400px;
+    height: 300px;
+}
+
+button{
+    background-color: rgb(0, 77, 179);
+    border: 2px solid black;
+    width: 150px;
+    height: 50px;
+    font-size:x-large;
+    font-weight: bold;
+    color: azure;
+}
+
+#input-grid-size{
+    width: 90%;
+    height: 50px;
 }
 
 .flex-item {
